# DAProject2

./: CMakeLists.txt  README.md  myProg
Data/output/basic/: basic1.txt  basic2.txt  basic3.txt  basic4.txt  basic5.txt  basic6.txt  basic7.txt
Data/output/free/: free1.txt  free2.txt  free3.txt  free4.txt  free5.txt  free6.txt  free7.txt
Data/output/spilling/: spilling1.txt  spilling2.txt  spilling3.txt  spilling4.txt  spilling5.txt  spilling6.txt  spilling7.txt
Data/output/splitting/: splitting1.txt  splitting2.txt  splitting3.txt  splitting4.txt  splitting5.txt  splitting6.txt  splitting7.txt
Data/ranges/: ranges7.txt
Data/registers/: free_regs1.txt  free_regs3.txt  spilling_regs1.txt  spilling_regs3.txt  splitting_regs1.txt  splitting_regs2.txt
Src/: myProg.cpp
Src/DataStructures/: AlgorithmConfig.h  AllocationResult.h  Build.cpp  Build.h  Graph.h  LiveRange.h  Parser.h  Point.h  RegisterAlloc.h  Web.h
Src/Solver/: Build.cpp  Build.h  RegisterAlloc.cpp  RegisterAlloc.h  Writer.cpp  Writer.h  Writter.h
